Make sure all views on mobile have their own top header with dismiss button and title.

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -278,7 +278,7 @@ div.menu {
 
       @include mobile() {
         left: 0;
-        top: 27px;
+        top: 25px;
       }
     }
 
