--- a/scss/partials/_reminders.scss
+++ b/scss/partials/_reminders.scss
@@ -65,11 +65,11 @@ div.reminders-container {
       top: 0px;
 
       @include mobile() {
-        top: 12px;
-        left: 19px;
+        top: 18px;
+        left: 11px;
         right: unset;
         display: block;
-        background-image: cdnUrl("/img/ML/section_add_mobile_close.svg");
+        background-image: cdnUrl("/img/ML/mobile_close_x.svg");
         background-size: 14px 14px;
         width: 24px;
         height: 24px;
@@ -104,12 +104,12 @@ div.reminders-container {
         line-height: 30px;
 
         @include mobile() {
-          text-align: center;
+          text-align: left;
           width: 100%;
           height: 56px;
           font-size: 16px;
           line-height: 22px;
-          padding: 17px 0;
+          padding: 21px 16px 21px 46px;
           box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
           margin-bottom: 0;
         }
